--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,31 @@
-version: '3'
+
 services:
-  postgres:
-    image: postgres:13
+  db:
+    image: postgres:16
+    container_name: postgres_db
+    restart: always
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
       POSTGRES_DB: ny_taxi
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: papis.mballo@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: pispa
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - pgadmin_data:/var/lib/pgadmin
 
   jupyter:
     build: .
@@ -19,9 +35,10 @@ services:
       - ./notebook:/ny_taxi/work
       - ./data:/data
     depends_on:
-      - postgres
+      - db
     environment:
       JUPYTER_TOKEN: "secret"
 
 volumes:
-  pg_data:
+  postgres_data:
+  pgadmin_data:
