--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,24 @@
-
 services:
   db:
     image: postgres:16
     container_name: postgres_db
     restart: always
     environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: root
-      POSTGRES_DB: ny_taxi
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
 
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin
     restart: always
     environment:
-      PGADMIN_DEFAULT_EMAIL: papis.mballo@gmail.com
-      PGADMIN_DEFAULT_PASSWORD: pispa
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
     ports:
       - "5050:80"
     depends_on:
@@ -29,15 +28,23 @@ services:
 
   jupyter:
     build: .
+    container_name: ny_taxi_jupyter
     ports:
       - "8888:8888"
     volumes:
-      - ./notebook:/ny_taxi/work
+      - ./notebook:/ny_taxi/work/notebooks 
       - ./data:/data
     depends_on:
       - db
     environment:
-      JUPYTER_TOKEN: "secret"
+      JUPYTER_TOKEN: ${JUPYTER_TOKEN}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_HOST: db  
+      POSTGRES_PORT: 5432
+      TABLE_NAME: ${TABLE_NAME}
+      DATA_URL: ${DATA_URL}
 
 volumes:
   postgres_data:
